prevent overflow of elements

--- a/less/index.less
+++ b/less/index.less
@@ -121,6 +121,7 @@ p {
             justify-content: space-evenly;
             align-items: center;
             margin-left: auto;
+            overflow: hidden;
 
             @media( max-width: 825px ) {
                 display: none;
